--- a/package.json
+++ b/package.json
@@ -22,13 +22,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "js-cookie": "^3.0.5",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-google-recaptcha-v3": "^1.10.1",
-    "react-typical": "^0.1.3",
-    "vanilla-cookieconsent": "^3.0.1"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.5.2",
