--- a/static/helm/index.yaml
+++ b/static/helm/index.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 entries:
   koreo:
   - apiVersion: v2
-    appVersion: v0.0.1
-    created: "2025-03-18T14:05:21.585936-05:00"
+    appVersion: 0.1.0
+    created: "2025-03-19T15:45:26.325942-05:00"
     description: A Helm chart for Koreo
-    digest: dd08f003ab0da7018dda73c8fc0ddd842c5bfb7f5ff363ddf1d79e175da970e4
+    digest: 7c595da920dae729fe4eeddc9723f0b2487fd074acede9ff4a270dfc0c4739f6
     home: https://github.com/koreo.dev/koreo
     icon: https://koreo.dev/img/koreo-logo.png
     maintainers:
@@ -18,4 +18,4 @@ entries:
     urls:
     - https://koreo.dev/helm/koreo-0.0.1.tgz
     version: 0.0.1
-generated: "2025-03-18T14:05:21.585126-05:00"
+generated: "2025-03-19T15:45:26.32349-05:00"
