--- a/static/helm/index.yaml
+++ b/static/helm/index.yaml
@@ -2,8 +2,25 @@ apiVersion: v1
 entries:
   koreo:
   - apiVersion: v2
+    appVersion: "0.1"
+    created: "2025-04-11T13:59:19.036396985Z"
+    description: A Helm chart for Koreo
+    digest: 9b846ad7a6f87b06ccda46e770d6d5b1c4e5aef1790b3a992656648c86abd985
+    home: https://github.com/koreo.dev/koreo
+    icon: https://koreo.dev/img/koreo-logo.png
+    maintainers:
+    - name: koreo-dev
+      url: https://koreo.dev
+    name: koreo
+    sources:
+    - https://github.com/koreo.dev/koreo
+    type: application
+    urls:
+    - https://koreo.dev/helm/koreo-0.1.0.tgz
+    version: 0.1.0
+  - apiVersion: v2
     appVersion: 0.1.8
-    created: "2025-04-10T19:13:31.556756-05:00"
+    created: "2025-04-11T13:59:19.034640533Z"
     description: A Helm chart for Koreo
     digest: 5f323957760f5bd385270672d2ffa120bab54a9611d60a0e9cec001f36cb3d7b
     home: https://github.com/koreo.dev/koreo
@@ -20,7 +37,7 @@ entries:
     version: 0.0.5
   - apiVersion: v2
     appVersion: 0.1.7
-    created: "2025-04-10T19:13:31.555965-05:00"
+    created: "2025-04-11T13:59:19.033774005Z"
     description: A Helm chart for Koreo
     digest: d73aa063ffb76426b51383a9ea10c06ffc87e79c80a30868c7a6f54b823c5611
     home: https://github.com/koreo.dev/koreo
@@ -37,7 +54,7 @@ entries:
     version: 0.0.4
   - apiVersion: v2
     appVersion: 0.1.6
-    created: "2025-04-10T19:13:31.555216-05:00"
+    created: "2025-04-11T13:59:19.032890886Z"
     description: A Helm chart for Koreo
     digest: 40215c99cf907dbc86cd1cc20f08137eff090eebed31b18866491c79652397e3
     home: https://github.com/koreo.dev/koreo
@@ -54,7 +71,7 @@ entries:
     version: 0.0.3
   - apiVersion: v2
     appVersion: 0.1.6
-    created: "2025-04-10T19:13:31.554378-05:00"
+    created: "2025-04-11T13:59:19.032002678Z"
     description: A Helm chart for Koreo
     digest: 5cfbac6e926a234e766e74231e51675de95ff9b8ce8618d6bcd013196a9f75dd
     home: https://github.com/koreo.dev/koreo
@@ -71,7 +88,7 @@ entries:
     version: 0.0.2
   - apiVersion: v2
     appVersion: 0.1.0
-    created: "2025-04-10T19:13:31.553522-05:00"
+    created: "2025-04-11T13:59:19.031090915Z"
     description: A Helm chart for Koreo
     digest: a81fd012428b578ecb718b468c3672585c970ccef29c0f240fc02f8c1a5e750d
     home: https://github.com/koreo.dev/koreo
@@ -86,4 +103,4 @@ entries:
     urls:
     - https://koreo.dev/helm/koreo-0.0.1.tgz
     version: 0.0.1
-generated: "2025-04-10T19:13:31.550257-05:00"
+generated: "2025-04-11T13:59:19.030022941Z"
