Redirect /docs to /docs/overview

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,14 @@ http {
 
         index index.html;
 
+        location = /docs {
+            return 301 /docs/overview;
+        }
+
+        location = /docs/ {
+            return 301 /docs/overview;
+        }
+
         location / {
             try_files $uri $uri/ /index.html;
         }
